--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/styles.css" />
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   </head>
   <body>
     <div class="container">
@@ -46,9 +49,7 @@
               <h5 class="date"> Data </p>
             </div>
             <div class="col-2">
-              <h3 class="temperature" id="current-temperature">36</h3>
-              <a href="#" class="temp-links" id="celsius-link">°C</a> |
-              <a href="#" class="temp-links" id="fahrenheit-link">°F</a>
+              <h3 class="temperature" id="current-temperature">36ºC</h3>
             </div>
             <div class="col">
               <i class="fa-solid fa-sun i-icons"></i>
@@ -96,6 +97,6 @@
         </div>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
