--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
@@ -97,6 +97,6 @@
         </div>
       </div>
     </div>
-    <script src="src/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
