Added link to Github code

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           </div>
         </div>
       </div>
+Coded by Salomé Esteves. <a href="https://github.com/salomeEsteves/SheCodes_weatherApp" target="_blank" rel="noreferrer"> Open code here.</a> 
     </div>
     <script src="app.js"></script>
   </body>
