--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <h3 class="temperature" id="current-temperature">36ºC</h3>
             </div>
             <div class="col">
-              <i class="fa-solid fa-sun i-icons"></i>
+              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" alt="" class="">
             </div>
           </div>
           </div>
