Updated weather description

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="row">
             <div class="col-8">
               <h1 class="city">Lisboa</h1>
-              <h2 class="country">Portugal</h2>
+              <h2 class="description">Clear sky</h2>
               <h5 class="date"> Data </p>
             </div>
             <div class="col-2">
