--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
               <h5 class="date"> Data </p>
             </div>
             <div class="col-4 weather-info">
-              <h3 class="temperature" id="current-temperature">36ºC</h3>
-              <p class="" id="humidity"> Humidity: x%</p>
-              <p class="" id="wind-speed">Wind speed: x Km/h</p>
+              <h3 class="temperature" id="current-temperature">36 <a href="#" class="active" id="celsius-link">ºC</a> · <a href="#" id="fahrenheit-link"
+                class="">ºF</a> </h3>
+              <p id="humidity"> Humidity: x%</p>
+              <p id="wind-speed">Wind speed: x Km/h</p>
             </div>
           </div>
             <div class="col">
