--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
             <div class="col-4 weather-info">
               <h3 class="temperature" id="current-temperature">36 <a href="#" class="active" id="celsius-link">ºC</a> · <a href="#" id="fahrenheit-link"
                 class="">ºF</a> </h3>
-              <p id="humidity"> Humidity: x%</p>
-              <p id="wind-speed">Wind speed: x Km/h</p>
+                <ul>
+                  <li>Humidity: <span id="humidity"></span>%</li>
+                  <li>Wind: <span id="wind-speed"></span> km/h</li>
+                </ul>
             </div>
           </div>
             <div class="col">
