Updated JS temperature and CSS adjustments

--- a/index.html
+++ b/index.html
@@ -49,17 +49,23 @@
               <h2 class="description">Clear sky</h2>
               <h5 class="date"> Data </p>
             </div>
-            <div class="col-4 weather-info">
-              <h3 class="temperature" id="current-temperature">36 <a href="#" class="active" id="celsius-link">ºC</a> · <a href="#" id="fahrenheit-link"
-                class="">ºF</a> </h3>
-                <ul>
-                  <li>Humidity: <span id="humidity"></span>%</li>
-                  <li>Wind: <span id="wind-speed"></span> km/h</li>
-                </ul>
-            </div>
-          </div>
-            <div class="col">
+            <div class="col-4 weather-info d-flex">
+              <h3 class="temperature" id="current-temperature">36 </h3> <a href="#" class="active" id="celsius-link">ºC</a> · <a href="#" id="fahrenheit-link"
+                class="">ºF</a> 
+              </div>
+              </div>
+
+
+              <div class="row">
+            <div class="col-8">
               <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" alt="" class="">
+            </div>
+            <div class="col-4">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind-speed"></span> km/h</li>
+              </ul>
+            </div>
             </div>
           
           </div>
