--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
               <h5 class="date"> Data </p>
             </div>
             <div class="col-4 weather-info d-flex">
-              <h3 class="temperature" id="current-temperature">36 </h3> <a href="#" class="active" id="celsius-link">ºC</a> · <a href="#" id="fahrenheit-link"
-                class="">ºF</a> 
+              <h3 class="temperature" id="current-temperature">36 </h3> <p class="temp-links"><a href="#" class="active" id="celsius-link">ºC</a> |<a href="#" id="fahrenheit-link"
+                class="">ºF</a> </p>
               </div>
               </div>
 
