--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
               <div class="row">
             <div class="col-8">
-              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" alt="" class="">
+              <img src="" alt="" class="" id="icon">
             </div>
             <div class="col-4">
               <ul>
