Tried to automate search to Lisbon (not working). Final css adjustments

--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
           </form>
           <div class="row">
             <div class="col-8 city-info">
-              <h1 class="city">Lisboa</h1>
-              <h2 class="description">Clear sky</h2>
+              <h1 class="city">Lisbon</h1>
+              <h2 class="description"></h2>
               <h5 class="date"> Data </p>
             </div>
             <div class="col-4 weather-info d-flex">
-              <h3 class="temperature" id="current-temperature">36 </h3> <p class="temp-links"><a href="#" class="active" id="celsius-link">ºC</a> |<a href="#" id="fahrenheit-link"
-                class="">ºF</a> </p>
+              <h3 class="temperature" id="current-temperature"> </h3> <p class="temp-links"><a href="#" class="active" id="celsius-link">ºC</a>
               </div>
               </div>
 
