--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
               <h5 class="date"> Data </p>
             </div>
             <div class="col-4 weather-info d-flex">
-              <h3 class="temperature" id="current-temperature"> </h3> <p class="temp-links"><a href="#" class="active" id="celsius-link">ºC</a>
-              </div>
+              <ul>
+              <li><h3 class="temperature-celsius" id="current-temperature"> </h3></li>
+             <li> <h3 class="temperature" id="current-temperature-farenheit"> </h3></li>
+            </ul>  
+            </div>
               </div>
 
 
