Updates search button to submit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <input class="form-control" type="text" id="city-input" placeholder="Search..." />
             </div>
             <div class="col-2">
-              <button type="button" class="btn btn-outline-warning mb-3" id="search-glass" value="go-search">
+              <button type="submit" class="btn btn-outline-warning mb-3" id="search-glass" value="go-search">
                 <i class="fa-solid fa-magnifying-glass i-search"></i>
               </button>
             </div>
