Added forecast HTML, CSS and JS

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
             <div class="col-4 weather-info d-flex">
               <ul>
               <li><h3 class="temperature-celsius" id="current-temperature"> </h3></li>
-             <li> <h3 class="temperature" id="current-temperature-farenheit"> </h3></li>
             </ul>  
             </div>
               </div>
@@ -69,7 +68,7 @@
               </ul>
             </div>
             </div>
-          
+            <div class="weather-forecast" id="forecast"></div>
           </div>
         </div>
         <p class="note"> 👩🏻‍💻 Coded by <a href="https://github.com/salomeEsteves/SheCodes_weatherApp" target="_blank" rel="noreferrer"> Salomé Esteves </a> </p>
